@@ -8,6 +8,7 @@ TODO:
 
 1.22 - ?
 	- Inverted vote graph
+	- Relation graph image maps are now stored in the DB
 
 1.21 - 2008-08-16 (r90)
 	- Added !vn and !uptime commands to Multi::IRC
